# advent_of_code_2022

./: README.md
01/: solution.py
02/: solution.hs  solution_b.py
03/: solution.hs  solution.py
04/: solution.py
05/: solution.hs
07/: solution.hs
08/: solution.hs
09/: solution.hs
10/: solution.hs
12/: solution.hs  solution.py
13/: solution.hs  solution.py
14/: solution.py
15/: solution.py
17/: solution.hs  solution.py
18/: solution.hs
2022/01/: solution.hs
2022/02/: solution.py
2022/03/: solution.hs
2022/04/: solution.hs  solution.py
2022/05/: solution.py
2022/06/: solution.hs  solution.py
2022/07/: solution.py
2022/08/: solution.hs  solution.py
2022/09/: solution.py
2022/10/: solution.py
2022/11/: solution.hs  solution.py
2022/12/: solution.py
2022/13/: solution.hs
2022/14/: solution.hs
2022/15/: solution.hs
2022/16/: solution.hs  solution.py
2022/17/: solution.py
2022/18/: solution.py
2022/19/: solution.hs  solution.py
2022/20/: solution.hs  solution.py
2022/21/: solution.hs
2022/22/: solution.hs  solution.py
2022/23/: solution.py
2022/24/: solution.hs  solution.py
2022/25/: solution.hs  solution.py
2024/: CHANGELOG.md  adventofcode2024.cabal  day14.py  test.py  test2.py  test3.py
2024/app/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day17Test.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.bkp  Day21.bkp2  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
2024/src/: MyLib.hs
21/: solution.py
23/: solution.hs
25/: solution.py
