cabal-version:      2.4
name:               adventofcode2024
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sigurður Ægir Jónsson
maintainer:         siggi84@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable day1
    main-is:          Day1.hs
    build-depends:
        base ^>=4.16.4.0,
        containers,
        adventofcode2024

    hs-source-dirs:   app
    default-language: Haskell2010

executable day2
    main-is:          Day2.hs
    build-depends:
        base ^>=4.16.4.0,
        containers,
        adventofcode2024

    hs-source-dirs:   app
    default-language: Haskell2010

executable day3
    main-is:          Day3.hs
    build-depends:
        base ^>=4.16.4.0,
        containers,
        adventofcode2024,
        parsec ^>=3.1.16

    hs-source-dirs:   app
    default-language: Haskell2010

executable day4
    main-is:          Day4.hs
    build-depends:
        base ^>=4.16.4.0,
        containers,
        adventofcode2024

    hs-source-dirs:   app
    default-language: Haskell2010

executable day5
    main-is:          Day5.hs
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        parsec ^>=3.1.16

    hs-source-dirs:   app
    default-language: Haskell2010

executable day6
    main-is:          Day6.hs
    ghc-options: -O3
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        parsec ^>=3.1.16

    hs-source-dirs:   app
    default-language: Haskell2010

executable day7
    main-is:          Day7.hs
    ghc-options: -O3
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        parsec ^>=3.1.16

    hs-source-dirs:   app
    default-language: Haskell2010

executable day8
    main-is:          Day8.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        parsec ^>=3.1.16

    hs-source-dirs:   app
    default-language: Haskell2010

executable day9
    main-is:          Day9.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        parsec ^>=3.1.16,
        vector

    hs-source-dirs:   app
    default-language: Haskell2010

executable day10
    main-is:          Day10.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0

    hs-source-dirs:   app
    default-language: Haskell2010

executable day11
    main-is:          Day11.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0

    hs-source-dirs:   app
    default-language: Haskell2010

executable day12
    main-is:          Day12.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0

    hs-source-dirs:   app
    default-language: Haskell2010

executable day13
    main-is:          Day13.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0

    hs-source-dirs:   app
    default-language: Haskell2010

executable day14
    main-is:          Day14.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        megaparsec,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0

    hs-source-dirs:   app
    default-language: Haskell2010

executable day15
    main-is:          Day15.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        megaparsec,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0

    hs-source-dirs:   app
    default-language: Haskell2010

executable day16
    main-is:          Day16.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        megaparsec,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0,
        PSQueue ^>=1.2.0

    hs-source-dirs:   app
    default-language: Haskell2010

executable day17
    main-is:          Day17.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        megaparsec,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0,
        PSQueue ^>=1.2.0,
        HUnit ^>=1.6.2.0,
        QuickCheck ^>=2.14.2

    hs-source-dirs:   app
    default-language: Haskell2010

executable day18
    main-is:          Day18.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        megaparsec,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0,
        PSQueue ^>=1.2.0,
        HUnit ^>=1.6.2.0,
        QuickCheck ^>=2.14.2

    hs-source-dirs:   app
    default-language: Haskell2010

executable day19
    main-is:          Day19.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        megaparsec,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0,
        PSQueue ^>=1.2.0,
        HUnit ^>=1.6.2.0,
        QuickCheck ^>=2.14.2,
        bytestring,
        bytestring-trie

    hs-source-dirs:   app
    default-language: Haskell2010

executable day20
    main-is:          Day20.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        megaparsec,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0,
        PSQueue ^>=1.2.0,
        HUnit ^>=1.6.2.0,
        QuickCheck ^>=2.14.2,
        bytestring,
        bytestring-trie

    hs-source-dirs:   app
    default-language: Haskell2010

executable day21
    main-is:          Day21.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        megaparsec,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0,
        PSQueue ^>=1.2.0,
        HUnit ^>=1.6.2.0,
        QuickCheck ^>=2.14.2,
        bytestring,
        bytestring-trie

    hs-source-dirs:   app
    default-language: Haskell2010

executable day22
    main-is:          Day22.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        megaparsec,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0,
        PSQueue ^>=1.2.0,
        HUnit ^>=1.6.2.0,
        QuickCheck ^>=2.14.2,
        bytestring,
        bytestring-trie

    hs-source-dirs:   app
    default-language: Haskell2010

executable day23
    main-is:          Day23.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        megaparsec,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0,
        PSQueue ^>=1.2.0,
        HUnit ^>=1.6.2.0,
        QuickCheck ^>=2.14.2,
        bytestring,
        bytestring-trie

    hs-source-dirs:   app
    default-language: Haskell2010

executable day24
    main-is:          Day24.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        megaparsec,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0,
        PSQueue ^>=1.2.0,
        HUnit ^>=1.6.2.0,
        QuickCheck ^>=2.14.2,
        bytestring,
        bytestring-trie

    hs-source-dirs:   app
    default-language: Haskell2010

executable day25
    main-is:          Day25.hs
    ghc-options: -O2
    build-depends:
        base ^>=4.16.4.0,
        containers,
        split,
        adventofcode2024,
        megaparsec,
        parsec ^>=3.1.16,
        array ^>=0.5.4.0,
        PSQueue ^>=1.2.0,
        HUnit ^>=1.6.2.0,
        QuickCheck ^>=2.14.2,
        bytestring,
        bytestring-trie

    hs-source-dirs:   app
    default-language: Haskell2010
